<resources>
    <string name="app_name">calculator</string>
    <string name="noZero">на ноль делить нельзя</string>
    <string name="btnDot">.</string>
    <string name="btnSym">+/-</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="empty">0</string>
    <string name="btnEqual">=</string>
    <string name="btnReset">C</string>
    <string name="btnLog">ЛОГ</string>
    <string name="btnMultiply">*</string>
    <string name="btnDevision">/</string>
    <string name="btnPlus">+</string>
    <string name="btnMinus">-</string>
</resources>
