<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mrlex.calculator.Main">

    <TextView
        android:id="@+id/display"
        android:layout_width="351dp"
        android:layout_height="71dp"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_row="0"
        android:gravity="end"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        tools:text="0"
        tools:layout_editor_absoluteY="16dp"
        tools:layout_editor_absoluteX="18dp" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:columnCount="4"
        app:layout_constraintHorizontal_bias="0.684"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:context=".MainActivity"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/display">

        <GridView
            android:id="@+id/gridNumbers"
            android:layout_width="261dp"
            android:layout_height="191dp"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_row="0"
            android:layout_rowSpan="4"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:horizontalSpacing="10dp"
            android:numColumns="3"
            android:verticalSpacing="10dp">
        </GridView>

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="3"
            android:layout_gravity="fill_horizontal"
            android:layout_row="4"
            android:tag="btnEqual"
            android:text="@string/btnEqual"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:tag="btnRes"
            android:text="@string/btnReset"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnViewCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="5"
            android:tag="btnViewCalc"
            android:text="@string/btnLog"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="1"
            android:tag="btnMulti"
            android:text="@string/btnMultiply"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnDevision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="2"
            android:tag="btnDevis"
            android:text="@string/btnDevision"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="3"
            android:tag="btnPlus"
            android:text="@string/btnPlus" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="0"
            android:tag="btnMinus"
            android:text="@string/btnMinus"
            android:textSize="20sp" />

    </GridLayout>

</android.support.constraint.ConstraintLayout>
